# Neunundneunzig-OKamele

./: LICENSE  README.md  dune-project
lib/: P001_tail.ml  P002_tail_penultimate.ml  P003_nth_element.ml  P004_length_of_list.ml  P005_reverse_list.ml  P006_palindrome.ml  P007_flatten_list.ml  P008_remove_duplicates.ml  P009_pack_duplicates.ml  P010_run_length_encoding.ml  dune
test/: dune  test_P001_tail.ml  test_P002_tail_penultimate.ml  test_P003_nth_element.ml  test_P004_length_of_list.ml  test_P005_reverse_list.ml  test_P006_palindrome.ml  test_P007_flatten_list.ml  test_P008_remove_duplicates.ml  test_P009_pack_duplicates.ml  test_P010_run_length_encoding.ml
