(library
 (name P001_tail)
 (modules P001_tail))

(library
 (name P002_tail_penultimate)
 (modules P002_tail_penultimate))

(library
 (name P003_nth_element)
 (modules P003_nth_element))

(library
 (name P004_length_of_list)
 (modules P004_length_of_list))

(library
 (name P005_reverse_list)
 (modules P005_reverse_list))
