(library
 (name P001_tail)
 (modules P001_tail))

(library
 (name P002_tail_penultimate)
 (modules P002_tail_penultimate))

(library
 (name P003_nth_element)
 (modules P003_nth_element))

(library
 (name P004_length_of_list)
 (modules P004_length_of_list))

(library
 (name P005_reverse_list)
 (modules P005_reverse_list))

(library
 (name P006_palindrome)
 (modules P006_palindrome))

(library
 (name P007_flatten_list)
 (modules P007_flatten_list))

(library
 (name P008_remove_duplicates)
 (modules P008_remove_duplicates))

(library
 (name P009_pack_duplicates)
 (modules P009_pack_duplicates))

(library
 (name P010_run_length_encoding)
 (modules P010_run_length_encoding))
