(library
 (name test_P001_tail)
 (modules test_P001_tail)
 (libraries P001_tail)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P002_tail_penultimate)
 (modules test_P002_tail_penultimate)
 (libraries P002_tail_penultimate)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P003_nth_element)
 (modules test_P003_nth_element)
 (libraries P003_nth_element)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P004_length_of_list)
 (modules test_P004_length_of_list)
 (libraries P004_length_of_list)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))
