(library
 (name test_P001_tail)
 (modules test_P001_tail)
 (libraries P001_tail)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P002_tail_penultimate)
 (modules test_P002_tail_penultimate)
 (libraries P002_tail_penultimate)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P003_nth_element)
 (modules test_P003_nth_element)
 (libraries P003_nth_element)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P004_length_of_list)
 (modules test_P004_length_of_list)
 (libraries P004_length_of_list)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P005_reverse_list)
 (modules test_P005_reverse_list)
 (libraries P005_reverse_list)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P006_palindrome)
 (modules test_P006_palindrome)
 (libraries P006_palindrome)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P007_flatten_list)
 (modules test_P007_flatten_list)
 (libraries P007_flatten_list)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P008_remove_duplicates)
 (modules test_P008_remove_duplicates)
 (libraries P008_remove_duplicates)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P009_pack_duplicates)
 (modules test_P009_pack_duplicates)
 (libraries P009_pack_duplicates)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))

(library
 (name test_P010_run_length_encoding)
 (modules test_P010_run_length_encoding)
 (libraries P010_run_length_encoding)
 (inline_tests)
 (preprocess
  (pps ppx_expect ppx_assert ppx_inline_test)))
